Changed Privacy Policy

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         color: #f5f5f5;
       }
 
+      li {
+        color: white;
+        text-decoration: none;
+      }
+
       h1 {
         font-size: 1.5rem;
         margin-bottom: 1rem;
@@ -209,55 +214,82 @@
         <div class="last-updated">Last updated: November 13, 2025</div>
         <div class="modal-body">
           <p>
-            Coin Flip 3D Simulator (“the App”) is committed to protecting your
-            privacy. This Privacy Policy explains how the App handles your
-            information.
+            <strong>Coin Flip 3D Simulator</strong> (“the App”) is committed to
+            protecting your privacy. This Privacy Policy explains how the App
+            handles your information.
           </p>
 
           <h2>1. Information We Do Not Collect</h2>
           <p>
-            The App does <strong>not</strong> collect, store, use, or share any
-            personal data.
+            The App itself does not directly collect, store, or use any personal
+            information from users.
           </p>
           <p>Specifically, the App does not collect:</p>
           <ul>
             <li>Your name</li>
             <li>Your email or phone number</li>
-            <li>Device identifiers</li>
-            <li>Usage data or analytics</li>
             <li>Location information</li>
             <li>Contact information</li>
             <li>Photos, videos, or audio</li>
-            <li>Motion data</li>
-            <li>Advertising or tracking information</li>
           </ul>
-          <p>
-            The App operates fully on your device and does not transmit any
-            information to servers or third parties.
-          </p>
 
           <h2>2. Third-Party Services</h2>
           <p>
-            The App does <strong>not</strong> use any third-party analytics,
-            advertising networks, SDKs, or data-tracking tools.
+            While the App does not directly collect personal data, it integrates
+            third-party services that may collect limited information
+            automatically for their functionality.
+          </p>
+
+          <p>The App uses the following third-party services:</p>
+          <ul>
+            <li>
+              <strong>Google AdMob</strong> – used to display ads. AdMob may
+              collect device identifiers, IP addresses, and usage data to
+              deliver and measure ads.<br />
+              Learn more:
+              <a
+                href="https://policies.google.com/technologies/partner-sites"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Google Privacy & Terms</a
+              >.
+            </li>
+            <li>
+              <strong>RevenueCat</strong> – used to manage in-app purchases and
+              subscriptions. RevenueCat may collect purchase history and device
+              identifiers to verify and manage transactions.<br />
+              Learn more:
+              <a
+                href="https://www.revenuecat.com/privacy/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >RevenueCat Privacy Policy</a
+              >.
+            </li>
+          </ul>
+
+          <p>
+            These third-party services operate under their own privacy policies.
           </p>
 
           <h2>3. Children’s Privacy</h2>
           <p>
-            Because the App collects no data, it complies with applicable
-            children’s privacy laws and can be safely used by individuals of all
-            ages.
+            The App is suitable for all ages. It does not directly collect
+            personal data. However, third-party services such as AdMob may have
+            their own practices regarding data collection from children. If your
+            app is directed toward children, AdMob’s child-directed settings are
+            applied to limit personalized ads.
           </p>
 
           <h2>4. Changes to This Policy</h2>
           <p>
-            If the handling of information ever changes, this Privacy Policy
-            will be updated and the “Last updated” date will be revised.
+            If the handling of information changes, this Privacy Policy will be
+            updated and the “Last updated” date will be revised.
           </p>
 
           <h2>5. Contact Support</h2>
           <p>
-            For assistance, questions, or support, please visit
+            For questions, assistance, or support, please visit
             <a href="/support.html">Contact Support</a>.
           </p>
         </div>
