--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         color: #f5f5f5;
       }
 
-      li {
+      a,
+      a:visited,
+      a:hover,
+      a:focus,
+      a:active {
         color: white;
-        text-decoration: none;
+        text-decoration: underline;
       }
 
       h1 {
